Huge rework, nuked a lot of `@WrapMethod`/`@WrapOperation` injectors, greatly decreasing allocations and mixin overhead. This does come with the new risk where, if a method would normally cause a crash, it has the potential to deadlock the thread (potentially server thread). Finding a fix soon.
Supernova compat is mostly done, there's the potential either Spool or Supernova is broken due to indev issues, though it's in beta so I can't say for sure.